<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android学习交流平台1.0</string>
    <string name="action_settings">Settings</string>
	<string name="remember_password_string">记住密码</string>
	<string name="fetch_password_string">忘记密码？</string>
	<string name="username_string">用 户 名</string>
	<string name="userpassword_string">密 码</string>
	<string name="login_string">登 陆</string>
	<string name="register_string">注 册</string>
	<string name="myappname_string">Android学习交流平台1.0</string>
	<string name="changevertificationcode">看不清楚？换一张</string>
	<string name="resource_search_string">请输入查询内容</string>
	<string name="register_username">注册账号(8个以上字母、数字组成)</string>
	<string name="register_userpasswordfirst">输入密码(6位以上字母、数字组成)</string>
	<string name="register_certainuserpassword">确认密码</string>
	<string name="register_email">绑定邮箱(用于密码找回)</string>
	<string name="register_vertification">验证码</string>
	<string name="backpassword_username">用户名</string>
	<string name="backpassword_email" >邮箱</string>
	<string name="mysetting_default_name"><b>用户名</b></string>
	<string name="mysetting_default_motto">明天，你好</string>
	<string name="mysetting_tongyong">通   用</string>
	<string name="mysetting_myloads"><b>我  的  下  载</b></string>
	<string name="mysetting_mydynamics"><b>我  的  动  态</b></string>
	<string name="mysetting_mycomments"><b>我  的  评  论</b></string>
	<string name="mysetting_mymessages"><b>我  的  消  息</b></string>
	<string name="mysetting_mysetting">设  置</string>
	<string name="mysetting_aboutsoftware">关  于  软  件</string>
	<string name="mysetting_helpandresponse">帮  助  与  反  馈</string>
	<string name="mysetting_quit">退  出  登  陆</string>
	<string name="resource_title">资  源</string>
	<string name="friends_title">好  友</string>
	<string name="dynamic_title">空  间</string>
	<string name="school_title">学  校</string>
	<string name="dynamic_release">发  布</string>
	<string name="dynamic_dynamic_title">动  态</string>
	<string name="dynamic_help_title">互  助</string>
</resources>
