<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <ImageView
        android:id="@+id/main_bg_girlview"
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" />

    <EditText
      	 android:background="@drawable/main_bg_edittext_shapestyle"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/account_input_edittext"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
		android:hint="@string/username_string"
         />

    <EditText
      	 android:background="@drawable/main_bg_edittext_shapestyle"
        android:layout_marginBottom="10dp"
        android:id="@+id/password_input_edittext"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/userpassword_string"
        />

    <LinearLayout
        android:id="@+id/mian_bg_password_do"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/checkbutton_style"
            android:button="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/remember_password_string"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mian_bg_backpassword_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/fetch_password_string"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bg_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/mian_bg_password_do"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_bg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_bg_loginbutton_style"
            android:text="@string/login_string"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/main_bg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_bg_registerbutton_style"
            android:text="@string/register_string"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_bg_button"
        android:gravity="center"
        android:text="@string/myappname_string"
        android:textColor="#ffffff"
        android:textSize="10sp" />

</LinearLayout>