<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >
    <LinearLayout 
         android:background="@color/titlebarcolor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/backpassword_return_button"
            android:layout_margin="5dp"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/return_button"/>
        <TextView
            android:layout_margin="5dp"
            android:text="返回"
            android:textSize="24sp"
            android:textColor="#ffffff"
       	   android:layout_height="match_parent"
    	    android:layout_width="match_parent"
        >
        </TextView>
    </LinearLayout>
	<EditText 
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:background="@drawable/main_bg_edittext_shapestyle"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:hint="@string/backpassword_username"/>
	<EditText 
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:background="@drawable/main_bg_edittext_shapestyle"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:hint="@string/backpassword_email"
	    />
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:layout_width="match_parent"
	    android:layout_height="42dp">
	    <ImageView 
	        style="@drawable/imageview_corner"
	        android:background="@drawable/imageview_corner"
	        android:layout_gravity="center"
	        android:layout_width="140dp"
	        android:layout_height="50dp"
	        android:id="@+id/backpassword_vertificationcode_imageview"
	        />

	    <EditText
	        android:hint="@string/register_vertification"
	        android:id="@+id/backpassword_inputcode_edittext"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_gravity="center"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/main_bg_edittext_shapestyle" />
	</LinearLayout>
	<TextView 
	    android:layout_marginTop="10dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/backpassword_changecode_textview"
	    android:layout_marginLeft="50dp"
	    android:text="@string/changevertificationcode"/>
	<Button
	    android:layout_gravity="center"
	    android:layout_marginTop="180dp"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:background="@drawable/backpassword_fetchpassword_button"
	    ></Button>
	<TextView 
	        android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/myappname_string"/>
</LinearLayout>













